<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".ui.detail.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detailBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style = "@style/AppBarStyle"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detailToolbar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/ic_back"
                app:layout_constraintEnd_toStartOf="@id/tv_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_detail"
                style="@style/TextStyle.TITLE2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/detail_activity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                tools:ignore="NotSibling,TextContrastCheck" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/btn_share"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/detailsample_avatar"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailBarLayout"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextStyle.TITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:ignore="TextContrastCheck"
        tools:text="@string/github_name" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextStyle.SUBTITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:ignore="TextContrastCheck"
        tools:text="@string/github_username" />


    <TextView
        android:id="@+id/tv_followers"
        style="@style/TextStyle.VALUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_followers_label"
        app:layout_constraintEnd_toStartOf="@id/tv_repository"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_repository"
        tools:ignore="TextContrastCheck"
        tools:text="Followers" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/TextStyle.VALUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_following_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_repository"
        app:layout_constraintTop_toTopOf="@id/tv_repository"
        tools:ignore="TextContrastCheck"
        tools:text="Following" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/TextStyle.VALUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toTopOf="@id/tv_repository_label"
        app:layout_constraintEnd_toStartOf="@id/tv_following"
        app:layout_constraintStart_toEndOf="@id/tv_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        tools:ignore="TextContrastCheck"
        tools:text="Repository" />

    <TextView
        android:id="@+id/tv_followers_label"
        style="@style/TextStyle.LABEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        app:layout_constraintEnd_toEndOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_following_label"
        style="@style/TextStyle.LABEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="@id/tv_following"
        app:layout_constraintStart_toStartOf="@id/tv_following"
        app:layout_constraintTop_toBottomOf="@id/tv_following"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_repository_label"
        style="@style/TextStyle.LABEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        app:layout_constraintEnd_toEndOf="@id/tv_repository"
        app:layout_constraintStart_toStartOf="@id/tv_repository"
        app:layout_constraintTop_toBottomOf="@id/tv_repository"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/tv_location"
        style="@style/TextStyle.SUBTITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        app:drawableLeftCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_repository_label"
        tools:ignore="TextContrastCheck"
        tools:text="@string/location" />

    <ProgressBar
        android:id="@+id/progressBarDetail"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/lavender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/tab_layout"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:tabIndicatorColor="@color/purple_200"
        app:tabSelectedTextColor="@color/purple_200"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"/>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="206dp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="800dp"
        android:contentDescription="@string/fab_favorite"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite_border"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>