...
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle.LOGO"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/sv_user"
                tools:ignore="MissingConstraints,NotSibling" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

...
        android:queryBackground="@android:color/transparent"
        android:theme="@style/SearchViewTextStyle"
        app:searchIcon="@drawable/ic_search"
        app:closeIcon="@drawable/ic_searchclose"
        app:defaultQueryHint="@string/search_text"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@id/rv_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
...
