<resources>
    <string name="app_name">GitBuddy</string>
    <string name="github_username">Github username</string>
    <string name="avatar_sample">Sample avatar</string>
    <string name="github_name">Github name</string>
    <string name="detailsample_avatar">Detail sample avatar</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="location">Location</string>
    <string name="tab_layout">Tab layout</string>
    <string name="detail_activity">Detail</string>
    <string name="search_text">Search user</string>
    <string name="user_notfound">User not found</string>
    <string name="back_btn">Back</string>
    <string name="favorite_activity">Favorited</string>
    <string name="nofavorite_users">No favorite users added yet</string>
    <string name="btn_favorite">Favorite</string>
    <string name="fab_favorite">Fab Favorite</string>
    <string name="btn_share">Share</string>
</resources>